--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
         </div>
         
         <ul>
-            <li>Início</li>
-            <li>Produtos</li>
-            <li>Sobre nós</li>
-            <li>Entrar</li>
-            <li>Cadastrar</li>
-        </ul>
+            <li><button class="home">Início</button></li>
+            <li><button class="Produtos">Produtos</button></li>
+            <li><button class="Sobre nós">Sobre nós</button></li>
+            <li><button class="Entrar">Entrar</button></li>
+             <li><button class="cadastrar">Cadastrar</button></li>        </ul>
     </nav>
 <header>
     <div class="cabeçalho">
@@ -85,6 +84,10 @@
       </ul>
     </section>
   </div>
+  
+  <footer>
+    <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
+  </footer>
 </main>
 
 
