Botões funcionais e pagina de cadastro

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
     <meta name="description" content="Borba Tech - Soluções inteligentes em informática. Manutenção, montagem e otimização de computadores com qualidade e confiança.">
 
     <title>Borba Tech - soluções inteligentes para seu computador</title>
@@ -21,11 +21,13 @@
         </div>
         
         <ul>
-            <li><button class="home">Início</button></li>
-            <li><button class="Produtos">Produtos</button></li>
-            <li><button class="Sobre nós">Sobre nós</button></li>
-            <li><button class="Entrar">Entrar</button></li>
-             <li><button class="cadastrar">Cadastrar</button></li>        </ul>
+  <li><a href="index.html" class="botao-nav">Início</a></li>
+  <li><button class="Produtos">Produtos</button></li>
+  <li><button class="Sobre nós">Sobre nós</button></li>
+  <li><button class="Entrar">Entrar</button></li>
+  <li><a href="index1.html" class="botao-nav">Cadastrar</a></li>
+</ul>
+
     </nav>
 <header>
     <div class="cabeçalho">
