--- a/cadastro.html
+++ b/cadastro.html
@@ -23,6 +23,7 @@
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
   <li><a href="sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
+  <li><a href="cadastro.html" class="botao-nav">Cadastrar</a></li>
   
 </ul>
 
