--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <ul>
   <li><a href="index.html" class="botao-nav">Início</a></li>
   <li><button class="Produtos">Produtos</button></li>
-  <li><button class="Sobre nós">Sobre nós</button></li>
+  <li><a href="sobre.html" class="menu-btn">Sobre nós</a></li></li>
   <li><button class="Entrar">Entrar</button></li>
-  <li><a href="index1.html" class="botao-nav">Cadastrar</a></li>
+  <li><a href="cadastro.html" class="botao-nav">Cadastrar</a></li>
 </ul>
 
     </nav>
