--- a/sobre.html
+++ b/sobre.html
@@ -13,13 +13,19 @@
                  <p>soluções inteligentes para seu computador!</p>
 
         </div>
-        
+        <!-- Botão hambúrguer -->
+<div class="hamburger" onclick="document.querySelector('nav ul').classList.toggle('show')">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
     <ul>
   <li><a href="index.html" class="menu-btn">Início</a></li>
   <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
   <li><a href="sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
-  <li><a href="index1.html" class="menu-btn cadastrar">Cadastrar</a></li>
+  <li><a href="cadastro.html" class="menu-btn">Cadastrar</a></li>
     </ul>
 
     </nav>
