--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style-cadastro.css">
+    <link rel="stylesheet" href="static/css/style-cadastro.css">
     
     <title>Crie sua conta | Borba Tech</title>
 </head>
@@ -59,7 +59,7 @@
         </div>
     </main>
 
-    <script src="/static/Js/index1.js"></script>
+    <script src="static/Js/index1.js"></script>
 
    
 </body>
