--- a/sobre.html
+++ b/sobre.html
@@ -63,7 +63,7 @@
       </p>
     </div>
     <div class="foto">
-      <img src="/static/img/minha foto sobre min.png" alt="Foto de Max Borba">
+      <img src="static/img/minha foto sobre min.png" alt="Foto de Max Borba">
     </div>
   </div>
 </section>
