--- a/cadastro.html
+++ b/cadastro.html
@@ -60,7 +60,9 @@
     </main>
 
     <script src="static/Js/index1.js"></script>
-
+        <footer>
+            <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
+        </footer>
    
 </body>
 </html>
