--- a/cadastro.html
+++ b/cadastro.html
@@ -58,6 +58,10 @@
             </form>
         </div>
     </main>
+     <!-- Botão Flutuante WhatsApp -->
+<a href="https://wa.me/55SEUNUMERO" target="_blank" class="whatsapp-float">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
+</a>
 
     <script src="static/Js/index1.js"></script>
         <footer>
