--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                 </ul>
             </section>
         </div>
-
+ <!-- Botão Flutuante WhatsApp -->
+<a href="https://wa.me/55SEUNUMERO" target="_blank" class="whatsapp-float">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
+</a>
         
     </main>
 
