--- a/sobre.html
+++ b/sobre.html
@@ -69,7 +69,10 @@
 </section>
 
 
-
+ <!-- Botão Flutuante WhatsApp -->
+<a href="https://wa.me/55SEUNUMERO" target="_blank" class="whatsapp-float">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
+</a>
     </main>
 <footer>
             <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
