atualização de pagamentos

--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
 
     <ul>
   <li><a href="index.html" class="menu-btn">Início</a></li>
-  <li><a href="produtos.html" class="menu-btn">Produtos</a></li>
+  <li><a href="pagamentos.html" class="menu-btn">pagamentos</a></li>
   <li><a href="sobre.html" class="menu-btn">Sobre nós</a></li>
   <li><a href="login.html" class="menu-btn">Entrar</a></li>
   <li><a href="cadastro.html" class="menu-btn">Cadastrar</a></li>
