atualizando fundo de pagamento

--- a/pagamentos.html
+++ b/pagamentos.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="static/css/pagamentos.css">
 </head>
 <body>
+
+  <canvas id="bg"></canvas>
+
+
   <div class="container">
     <!-- Cartão -->
     <div class="cartao">
