--- a/pagamentos.html
+++ b/pagamentos.html
@@ -11,19 +11,33 @@
   <canvas id="bg"></canvas>
 
 
-  <div class="container">
-    <!-- Cartão -->
-    <div class="cartao">
-      <div class="cartao-inner" id="cartao">
-        <div class="cartao-front">
-          <h3 id="numero-cartao">#### #### #### ####</h3>
-          <p id="nome-cartao">NOME NO CARTÃO</p>
-          <p id="validade-cartao">MM/AA</p>
+  <div class="container-principal">
+
+    <!-- Cartão com novo design -->
+    <div class="cartao" id="cartao">
+      <header>
+        <span class="logo">
+          <img src="static/img/logo.png" alt="">
+          <h5>Master Card</h5>
+        </span>
+        <img src="static/img/chip.png" alt="" class="chip">
+      </header>
+
+      <div class="card-details">
+        <div class="name-number">
+          <h6>Card Number</h6>
+          <h5 class="number" id="numero-cartao">#### #### #### ####</h5>
+          <h5 class="name" id="nome-cartao">NOME NO CARTÃO</h5>
         </div>
-        <div class="cartao-back">
-          <div class="linha-magnetica"></div>
-          <p class="cvv">CVV: <span id="cvv-cartao">###</span></p>
+        <div class="valid-date">
+          <h6>Valid Thru</h6>
+          <h5 id="validade-cartao">MM/AA</h5>
         </div>
+      </div>
+
+      <div class="back">
+        <div class="linha-magnetica"></div>
+        <p class="cvv">CVV: <span id="cvv-cartao">###</span></p>
       </div>
     </div>
 
@@ -37,8 +51,8 @@
              oninput="atualizarCVV(this.value)">
       <button type="submit">Pagar</button>
     </form>
-  </div>
 
+  </div>
   <script src="static/Js/pagamentos.js"></script>
 </body>
 </html>
