Adiciona funcionalidades de força de senha e animação de fundo; atualiza links de CSS e imagens nos arquivos HTML.

--- a/pagamentos.html
+++ b/pagamentos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Pagamento</title>
-  <link rel="stylesheet" href="static/css/pagamentos.css">
+  <link rel="stylesheet" href="css/pagamentos.css">
 </head>
 <body>
 
@@ -17,10 +17,10 @@
     <div class="cartao" id="cartao">
       <header>
         <span class="logo">
-          <img src="static/img/logo.png" alt="">
+          <img src="img/logo.png" alt="">
           <h5>Master Card</h5>
         </span>
-        <img src="static/img/chip.png" alt="" class="chip">
+        <img src="img/chip.png" alt="" class="chip">
       </header>
 
       <div class="card-details">
@@ -53,6 +53,6 @@
     </form>
 
   </div>
-  <script src="static/Js/pagamentos.js"></script>
+  <script src="Js/pagamentos.js"></script>
 </body>
 </html>
