--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-sobre.css">
+    <link rel="stylesheet" href="css/style-sobre.css">
     <title>Quem Nós Somos | Borba Tech</title>
 </head>
 <body>
@@ -63,7 +63,7 @@
       </p>
     </div>
     <div class="foto">
-      <img src="static/img/minha foto sobre min.png" alt="Foto de Max Borba">
+      <img src="img/minha foto sobre min.png" alt="Foto de Max Borba">
     </div>
   </div>
 </section>
