--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-cadastro.css">
+    <link rel="stylesheet" href="css/style-cadastro.css">
     
     <title>Crie sua conta | Borba Tech</title>
 </head>
@@ -63,7 +63,7 @@
   <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
 </a>
 
-    <script src="static/Js/index1.js"></script>
+    <script src="Js/index1.js"></script>
         <footer>
             <p>&copy; 2025 Borba Tech - Todos os direitos reservados.</p>
         </footer>
