--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-home.css">
+    <link rel="stylesheet" href="css/style-home.css">
     <meta name="description" content="Borba Tech - Soluções inteligentes em informática. Manutenção, montagem e otimização de computadores com qualidade e confiança.">
     <title>Borba Tech - Sobre Nós</title>
 </head>
