Atualiza design do cartão: altera cabeçalho e detalhes, melhora acessibilidade e clareza.

--- a/pagamentos.html
+++ b/pagamentos.html
@@ -15,31 +15,36 @@
 
     <!-- Cartão com novo design -->
     <div class="cartao" id="cartao">
-      <header>
-        <span class="logo">
-          <img src="img/logo.png" alt="">
-          <h5>Master Card</h5>
-        </span>
-        <img src="img/chip.png" alt="" class="chip">
-      </header>
+    
+    <!-- Cabeçalho com logo e chip -->
+    <header>
+      <span class="logo">
+        <img src="img/logo.png" alt="Logo Borba Tech">
+        <h5>Borba Tech Card</h5>
+      </span>
+      <img src="img/chip.png" alt="Chip do cartão" class="chip">
+    </header>
 
-      <div class="card-details">
-        <div class="name-number">
-          <h6>Card Number</h6>
-          <h5 class="number" id="numero-cartao">#### #### #### ####</h5>
-          <h5 class="name" id="nome-cartao">NOME NO CARTÃO</h5>
-        </div>
-        <div class="valid-date">
-          <h6>Valid Thru</h6>
-          <h5 id="validade-cartao">MM/AA</h5>
-        </div>
+    <!-- Detalhes do cartão -->
+    <div class="card-details">
+      <div class="name-number">
+        <h6>Card Number</h6>
+        <h5 class="number" id="numero-cartao">#### #### #### ####</h5>
+        <h5 class="name" id="nome-cartao">NOME NO CARTÃO</h5>
       </div>
-
-      <div class="back">
-        <div class="linha-magnetica"></div>
-        <p class="cvv">CVV: <span id="cvv-cartao">###</span></p>
+      <div class="valid-date">
+        <h6>Valid Thru</h6>
+        <h5 id="validade-cartao">MM/AA</h5>
       </div>
     </div>
+
+    <!-- Parte de trás do cartão -->
+    <div class="back">
+      <div class="linha-magnetica"></div>
+      <p class="cvv">CVV: <span id="cvv-cartao">###</span></p>
+    </div>
+
+  </div>
 
     <!-- Formulário -->
     <form class="inputs">
