Adiciona item de customização artística de gabinetes à lista de serviços

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <li>Criação de contas de e-mail, backup em nuvem e sincronização</li>
                     <li>Consultoria para upgrades e melhorias de performance</li>
                     <li>Criação de sites e páginas para empresas</li>
+                    <li>Customização artística de gabinetes</li>
                 </ul>
             </section>
         </div>
