--- a/pagamentos.html
+++ b/pagamentos.html
@@ -66,7 +66,7 @@
       <!-- Campo do cartão com logo da bandeira dentro do input -->
       <div class="input-card-wrapper" style="position: relative;">
         <input type="text" id="cardNumber" maxlength="19" placeholder="Número do Cartão" oninput="atualizarNumero(this.value)">
-        <img id="cardBrandInput" src="img/logo.png" alt="Bandeira" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); width: 40px; height: auto;">
+        <img id="cardBrandInput" src="img/cartão-logo.png" alt="Bandeira" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); width: 40px; height: auto;">
       </div>
 
       <!-- Bandeira em texto (opcional) -->
